<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.db</groupId>
	<artifactId>DerPate</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- NonNull and Nullable annotation -->
		<!-- https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.annotation -->
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>2.2.100</version>
		</dependency>
		
		<!-- MariaDB -->
		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
		<dependency>
		    <groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client</artifactId>
		    <version>2.3.0</version>
		</dependency>
		
		<!-- Hibernate -->
		<!-- https://bintray.com/hibernate/artifacts/hibernate-orm -->
		<dependency>
		  <groupId>org.hibernate</groupId>
		  <artifactId>hibernate-agroal</artifactId>
		  <version>5.4.0.CR2</version>
		  <type>pom</type>
		</dependency>
		
		<!-- HttpStatusCode conversion -->
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.5.6</version>
		</dependency>
		
		<!-- StringEscapeUtils -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text/1.6 -->
		<dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-text</artifactId>
		  <version>1.6</version>
		</dependency>
	</dependencies>
</project>